UI changes + text

--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,9 @@
                 </div>
                 <div class="row mt">
                     <div class="col-sm-12">
-                        <p>This project aims to help you to publish the next trending video on YouTube. Our visualization provides you essential information on how to optimize your title and publishing time for each video category and country.</p>
+                        <p>This visualization aims to help you to publish the next trending video on YouTube. We provide essential information on how to optimize your title and publishing time for each video category and country.</p>
+                        <br>
+                        <p style="color:#888;">The dataset used in the following visualizations is a daily record of the top trending YouTube videos. It proposes numerous insights such as title, channel name, category, views, likes, dislikes, comments, publish time, tags, etc. from different regions of the planet (​USA, Great Britain, Germany, Canada, France, Russia, Mexico, South Korea, Japan and India). It is provided by <a href="https://www.kaggle.com/datasnaek/youtube-new/" target="_blank">Kaggle</a> and offers information for more than 200k top trending videos.</p>
                     </div>
                 </div>
             </div>
